--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uma única ação que pode mudar o mundo!</title>
+    <link rel="stylesheet" href="stily.css">
 </head>
 <body>
     
@@ -12,11 +13,12 @@
 <header>
     <h1>Uma única ação que pode mudar o mundo!
     </h1>
+    <section>cabeçalho</section>
 </header>
 <body>
     <h2>Que a tecnologia tem evoluído muito nesses ultimos anos é um fato.
     </h2>
-    <p1>A tecnologia atual tem colaborado muito para o avanço do conhecimento no mundo 
+    <p1> A tecnologia atual tem colaborado muito para o avanço do conhecimento no mundo 
         todo, como por exemplo com cursos e faculdades onlines, com vendas e 
         empreendedorismo, na ajuda de engenhos e engenharia civil.
         A tecnologia pode desempenhar um importante papel na sustentabilidade e no meio
