--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     
 </body>
 </html>
-<header>
-    <h1>Uma única ação que pode mudar o mundo!
+<header class="cabeçalho">
+    <h1 class="titulo do site">Uma única ação que pode mudar o mundo!
     </h1>
     <section>cabeçalho</section>
 </header>
 <body>
-    <h2>Que a tecnologia tem evoluído muito nesses ultimos anos é um fato.
+    <h2 class="">Que a tecnologia tem evoluído muito nesses ultimos anos é um fato.
     </h2>
-    <p1> A tecnologia atual tem colaborado muito para o avanço do conhecimento no mundo 
+    <p1 class="conteudo"> A tecnologia atual tem colaborado muito para o avanço do conhecimento no mundo 
         todo, como por exemplo com cursos e faculdades onlines, com vendas e 
         empreendedorismo, na ajuda de engenhos e engenharia civil.
         A tecnologia pode desempenhar um importante papel na sustentabilidade e no meio
@@ -30,7 +30,8 @@
         Para isso, aqui enstão alguns cursos que podem estar ajudando no desenvolvimeno
         dessa abilidade com a tecnologia.
         </p1>
-        <img src="Alura.png" alt="Aluralogo">
+        <section>links</section>
+        <img src="Alura.png" alt="logodoalura">
         <img src="Instituto.png" alt="LogodoInstitutoFederaldeMinasGerais">
         <img src="Cedup.png" alt="LogoCedup">
 </body>
