--- a/index.html
+++ b/index.html
@@ -48,4 +48,12 @@
            Esses cursos podem te ajudar, lhe dando um conhecimento maior de como utilizar a
            tecnologia, facilitando muito sua vida.</p>
     </section>
+    <section class="rodape">
+
+    <footer class="nomes-do-rodape">
+        <h1>André Domingos Castro</h1>
+        <h1>Marcelo Henrique de Souza Monteiro</h1>
+    </footer>
+
+    </section>
 </body>
